--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container site-header-main">
         <nav id="site-navigation" class="main-navigation">
-          <img src="https://placehold.co/211x58" alt="" height="58px" />
+          <img src="img/Logopizza1.png" alt="" height="100px" />
           <ul id="menu-principal">
             <li><a href="#Inicio">Pizzaria</a></li>
             <li><a href="#Cardapio">Cardápio</a></li>
@@ -50,11 +50,11 @@
 
     <main>
       <a href="https://ifood.com.br" class="ifood" target="_blank">
-        <img src="https://placehold.co/165x92" alt="" />
+        <img src="img/IFOODLOGO.png"  height="92" width="165" alt="" />
       </a>
 
       <div id="BoasVindas">
-        <img src="https://placehold.co/300x200" alt="" />
+        <img src="img/_Mascote (300 x 200 px).png" alt="" />
         <div id="TextoBoasVindas">
           <h4>Seja Bem Vindo a</h4>
           <h3>PIZZARIA</h3>
@@ -70,14 +70,14 @@
       </div>
 
       <div id="Cardapio">
-        <img class="divider" src="https://placehold.co/210x25" alt="" />
+        <img class="divider" src="img/SetaPizza.png" alt="" height="200px" />
         <h2>nosso cardápio</h2>
         <a id="btnCardapio" href="#">conheça nossas delícias</a>
 
         <div id="PromoPizzas">
-          <img src="https://placehold.co/460x460" alt="" />
-          <img src="https://placehold.co/460x460" alt="" />
-          <img src="https://placehold.co/460x460" alt="" />
+          <img src="img/pizza1.png" alt="" />
+          <img src="img/Pizzapeperoni.png" alt="" />
+          <img src="" alt="" />
           <img src="https://placehold.co/460x460" alt="" />
         </div>
       </div>
