finalmente tudo certo, eu acho

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <img src="img/_Mascote (300 x 200 px).png" alt="" />
         <div id="TextoBoasVindas">
           <h4>Seja Bem Vindo a</h4>
-          <h3>PIZZARIA</h3>
+          <h3>COWABUNGA</h3>
           <p>
             A pizza atravessou o Atlântico, conquistou São Paulo e os nossos
-            corações. Na Castello's Pizzaria queremos que você tenha a melhor
+            corações. Na Cowabunga Pizza queremos que você tenha a melhor
             experiência ao apreciar todo o sabor de uma verdadeira pizza.
             Tradição e qualidade que se iniciam desde a escolha minuciosa dos
             ingredientes, incluindo o preparo artesanal da massa e ambiente para
@@ -77,8 +77,8 @@
         <div id="PromoPizzas">
           <img src="img/pizza1.png" alt="" />
           <img src="img/Pizzapeperoni.png" alt="" />
-          <img src="" alt="" />
-          <img src="https://placehold.co/460x460" alt="" />
+          <img src="img/Pizzacatu.png" alt=""  width="460px" height="460px"/>
+          <img src="img/pizza-champignon-1.webp" alt="" width="460px" height="460px" />
         </div>
       </div>
 
@@ -86,7 +86,7 @@
         <div>
           <h2>delivery</h2>
           <p>Faça o seu pedido! Pizzaria agora em sua casa.</p>
-          <img class="divider" src="https://placehold.co/210x25" alt="" />
+          <img class="divider" src="img/pizzinha.png" alt="" />
           <div class="sec-menu">
             <a
               href="https://wa.me/551499999999?text=Olá,%20gostaria%20de%20fazer%20um%20pedido!"
@@ -100,24 +100,24 @@
             </a>
           </div>
         </div>
-        <img src="https://placehold.co/512x340" alt="" />
+        <img src="img/mascotenumamoto.png" alt="" />
       </div>
 
       <div id="Icone">
         <div class="itens">
-          <img src="https://placehold.co/120" alt="" />
+          <img src="img/MOLHO.jpg" alt="" height="120px" width="120px" />
           <p>Ingredientes frescos e de altíssima qualidade.</p>
         </div>
         <div class="itens">
-          <img src="https://placehold.co/120" alt="" />
+          <img src="img/QUEJO.webp" alt="" height="120px" width="120px"/>
           <p>Ingredientes frescos e de altíssima qualidade.</p>
         </div>
         <div class="itens">
-          <img src="https://placehold.co/120" alt="" />
+          <img src="img/CALABRESA.png" alt="" height="120px" width="120px" />
           <p>Ingredientes frescos e de altíssima qualidade.</p>
         </div>
         <div class="itens">
-          <img src="https://placehold.co/120" alt="" />
+          <img src="img/FRANGO.jpg" alt="" height="120px" width="120px" />
           <p>Ingredientes frescos e de altíssima qualidade.</p>
         </div>
       </div>
@@ -155,7 +155,7 @@
     <footer>
       <div id="dados">
         <div>
-          <img src="https://placehold.co/182x50" alt="" />
+          <img src="img/Logopizza1.png" alt="" />
           <h3>Conheça também:</h3>
           <!-- inserir os ícones referentes ao local desejado -->
         </div>
