--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!--Ja esta com Bootstrap 5.3.3, talvez essa versão não de certo-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -72,8 +74,7 @@
       <div id="Cardapio">
         <img class="divider" src="img/SetaPizza.png" alt="" height="200px" />
         <h2>nosso cardápio</h2>
-        <a id="btnCardapio" href="#">conheça nossas delícias</a>
-
+        <a id="btnCardapio" href="#Cardapio">conheça nossas delícias</a>
         <div id="PromoPizzas">
           <img src="img/pizza1.png" alt="" />
           <img src="img/Pizzapeperoni.png" alt="" />
@@ -106,19 +107,19 @@
       <div id="Icone">
         <div class="itens">
           <img src="img/MOLHO.jpg" alt="" height="120px" width="120px" />
-          <p>Ingredientes frescos e de altíssima qualidade.</p>
+          <p>Molhos de ótima qualidade!</p>
         </div>
         <div class="itens">
           <img src="img/QUEJO.webp" alt="" height="120px" width="120px"/>
-          <p>Ingredientes frescos e de altíssima qualidade.</p>
+          <p>Ingredientes frescos!</p>
         </div>
         <div class="itens">
           <img src="img/CALABRESA.png" alt="" height="120px" width="120px" />
-          <p>Ingredientes frescos e de altíssima qualidade.</p>
+          <p>Carnes de primeira!</p>
         </div>
         <div class="itens">
           <img src="img/FRANGO.jpg" alt="" height="120px" width="120px" />
-          <p>Ingredientes frescos e de altíssima qualidade.</p>
+          <p>Ambiente limpo e agradável!</p>
         </div>
       </div>
 
@@ -177,6 +178,9 @@
         </script>
       </div>
     </footer>
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
